# build-your-own-gpt

./: README.md  build_your_own_gpt.ipynb  demo_text_generation.ipynb  model.py  pyproject.toml  utils.py
data/: output.txt
model/: tokenizer.pkl
notebooks/: demo_text_generation.ipynb
src/: model.py  tokenizer.py  utils.py
